Differentiate Open Graph and Insights:
- Update logic to only include app_id if necessary.
- Update i18n strings (use proper apostrophe in places I updated).
- Remove the sentence that states no template modification is neeeded (`xmlns` ;) ).
- Update Documentation.
- Update Changelog.

--- a/social-seo-metatags.yaml
+++ b/social-seo-metatags.yaml
@@ -12,6 +12,8 @@ social_pages:
       enabled: true
       type: summary
       username: ''
-    facebook:
+    opengraph:
+      enabled: true
+    insights:
       enabled: false
       appid: '1234567890'
