--- a/languages.yaml
+++ b/languages.yaml
@@ -40,10 +40,15 @@ en:
         USERNAME: 'Username'
         USERNAME_HELP: 'If you not use AboutMe plugin, please define your twitter username (@username)'
 
-      FACEBOOK:
+      OPENGRAPH:
         NAME: 'Facebook Open Graph'
-        ENABLED: 'Facebook Open Graph active'
+        ENABLED: 'Facebook Open Graph'
         HELP: 'Share on Facebook'
+
+      INSIGHTS:
+        NAME: 'Facebook Insights'
+        ENABLED: 'Facebook Insights'
+        HELP: 'Analyse on Facebook'
         APPID: 'App ID'
         APPID_HELP: 'The App ID you get from the Facebook Developers page (https://developers.facebook.com/apps).'
 
@@ -87,11 +92,16 @@ fr:
           SUMMARY: 'Carte de résumé'
         ABOUTME: 'Utiliser le plugin AboutMe'
         USERNAME: 'Nom d''utilisateur'
-        USERNAME_HELP: 'Si le plugin AboutMe n''est pas utilisé, veuillez définir le nom d''utilisateur Twitter SVP'
+        USERNAME_HELP: 'Si le plugin AboutMe n’est pas utilisé, veuillez définir le nom d’utilisateur Twitter SVP'
 
-      FACEBOOK:
+      OPENGRAPH:
         NAME: 'Facebook Open Graph'
-        ENABLED: 'Facebook Open Graph activé'
+        ENABLED: 'Facebook Open Graph'
         HELP: 'Partager sur Facebook'
+
+      INSIGHTS:
+        NAME: 'Facebook Insights'
+        ENABLED: 'Facebook Insights'
+        HELP: 'Analyser sur Facebook'
         APPID: 'ID d’application'
         APPID_HELP: 'L’ID d’application pour se connecter à la page Développeurs Facebook (https://developers.facebook.com/apps).'
