--- a/languages.yaml
+++ b/languages.yaml
@@ -40,17 +40,14 @@ en:
         USERNAME: 'Username'
         USERNAME_HELP: 'If you not use AboutMe plugin, please define your twitter username (@username)'
 
-      OPENGRAPH:
-        NAME: 'Facebook Open Graph'
-        ENABLED: 'Facebook Open Graph'
-        HELP: 'Share on Facebook'
-
-      INSIGHTS:
-        NAME: 'Facebook Insights'
-        ENABLED: 'Facebook Insights'
-        HELP: 'Analyse on Facebook'
-        APPID: 'App ID'
-        APPID_HELP: 'The App ID you get from the Facebook Developers page (https://developers.facebook.com/apps).'
+      FACEBOOK:
+        NAME: 'Facebook'
+        OPENGRAPH:
+          ENABLED: 'Facebook Open Graph'
+        INSIGHTS:
+          ENABLED: 'Facebook Insights'
+          APPID: 'App ID'
+          APPID_HELP: 'The App ID you get from the Facebook Developers page (https://developers.facebook.com/apps). Need Facebook Insights enabled.'
 
 # French
 fr:
@@ -94,14 +91,11 @@ fr:
         USERNAME: 'Nom d''utilisateur'
         USERNAME_HELP: 'Si le plugin AboutMe n’est pas utilisé, veuillez définir le nom d’utilisateur Twitter SVP'
 
-      OPENGRAPH:
-        NAME: 'Facebook Open Graph'
-        ENABLED: 'Facebook Open Graph'
-        HELP: 'Partager sur Facebook'
-
-      INSIGHTS:
-        NAME: 'Facebook Insights'
-        ENABLED: 'Facebook Insights'
-        HELP: 'Analyser sur Facebook'
-        APPID: 'ID d’application'
-        APPID_HELP: 'L’ID d’application pour se connecter à la page Développeurs Facebook (https://developers.facebook.com/apps).'
+      FACEBOOK:
+        NAME: 'Facebook'
+        OPENGRAPH:
+          ENABLED: 'Facebook Open Graph'
+        INSIGHTS:
+          ENABLED: 'Facebook Insights'
+          APPID: 'ID d’application'
+          APPID_HELP: 'L’ID d’application pour se connecter à la page Développeurs Facebook (https://developers.facebook.com/apps). Nécessite Facebook Insights activé.'
