--- a/languages.yaml
+++ b/languages.yaml
@@ -39,6 +39,7 @@ en:
         ABOUTME: 'Use AboutMe Plugin'
         USERNAME: 'Username'
         USERNAME_HELP: 'If you not use AboutMe plugin, please define your twitter username (@username)'
+        USERNAME_VALIDATION: 'Only letters (A-Z) and numbers (0-9), up to 15 characters.'
 
       FACEBOOK:
         NAME: 'Facebook'
@@ -90,6 +91,7 @@ fr:
         ABOUTME: 'Utiliser le plugin AboutMe'
         USERNAME: 'Nom d''utilisateur'
         USERNAME_HELP: 'Si le plugin AboutMe n’est pas utilisé, veuillez définir le nom d’utilisateur Twitter SVP'
+        USERNAME_VALIDATION: 'Uniquement des lettres (A-Z) et nombres (0-9), maximum 15 caractères.'
 
       FACEBOOK:
         NAME: 'Facebook'
