--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -83,6 +83,17 @@ form:
                       type: number
                       min: 2
                       max: 30
+                  quote.convert_simple:
+                    type: toggle
+                    label: PLUGINS.SOCIAL_SEO_METATAGS.GENERAL.QUOTE.SIMPLE_RAW.NAME
+                    help: PLUGINS.SOCIAL_SEO_METATAGS.GENERAL.QUOTE.SIMPLE_RAW.HELP
+                    highlight: 1
+                    default: 1
+                    options:
+                      1: PLUGINS.SOCIAL_SEO_METATAGS.YES
+                      0: PLUGINS.SOCIAL_SEO_METATAGS.NO
+                    validate:
+                      type: bool
               twitter:
                 type: tab
                 title: PLUGINS.SOCIAL_SEO_METATAGS.TWITTER.NAME
