--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -94,6 +94,17 @@ form:
                       0: PLUGINS.SOCIAL_SEO_METATAGS.NO
                     validate:
                       type: bool
+                  image.use_cache:
+                    type: toggle
+                    label: PLUGINS.SOCIAL_SEO_METATAGS.GENERAL.IMAGE.USE_CACHE.NAME
+                    help: PLUGINS.SOCIAL_SEO_METATAGS.GENERAL.IMAGE.USE_CACHE.HELP
+                    highlight: 1
+                    default: 0
+                    options:
+                      1: PLUGINS.SOCIAL_SEO_METATAGS.YES
+                      0: PLUGINS.SOCIAL_SEO_METATAGS.NO
+                    validate:
+                      type: bool
                   # @see https://developer.twitter.com/en/docs/twitter-for-websites/cards/overview/summary-card-with-large-image
                   default.image:
                     type: file
